# iq-notifier

./: .gitignore  .gitmodules  CMakeLists.txt  IQButton.qml  IQExpirationBar.qml  IQExtraNotifications.qml  IQFancyContainer.qml  IQHistoryNotification.qml  IQHistoryWindow.qml  IQNotification.qml  IQNotificationBar.qml  IQNotificationContainer.qml  IQPopup.qml  README.md  config.example  dbusnotification.h  iq-notifier.desktop  iq-notifier.spec  iqconfig.cpp  iqconfig.h  iqdbusservice.cpp  iqdbusservice.h  iqdisposition.cpp  iqdisposition.h  iqexpirationcontroller.cpp  iqexpirationcontroller.h  iqfullscreendetector.h  iqhistory.cpp  iqhistory.h  iqnotification.cpp  iqnotification.h  iqnotificationmodifiers.cpp  iqnotificationmodifiers.h  iqnotificationreceiver.cpp  iqnotificationreceiver.h  iqnotifications.cpp  iqnotifications.h  iqtheme.cpp  iqtheme.h  iqthemes.cpp  (+8 more)
X11-plugin/: CMakeLists.txt  x11fullscreendetector.cpp  x11fullscreendetector.h  x11fullscreendetectorprivate.cpp  x11fullscreendetectorprivate.h
etc/: .lint.swp  format  lint
themes/default/: theme
themes/pony/: theme
